--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
   <body>
     <h1>Redirect!</h1>
     This page only exists because GrayJay doesn't expect Git
+    <script type="text/javascript">
+      location = "https://github.com/voxelprismatic/grayjay-floatplane"
+    </script>
   </body>
 </html>
